{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 310,
  "lineage": "47f8a038-6df4-0ce7-81a3-2b4add3f88a4",
  "resources": [
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ec2_instance_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087a0156cb826e921",
            "arn": "arn:aws:ec2:eu-west-1:222634379970:instance/i-097bdeec616479519",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-097bdeec616479519",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04f024a231de7c090",
            "private_dns": "ip-11-0-1-21.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.21",
            "public_ip": "52.210.216.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a43c19f68acf024b",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd4e7d6f0f634dbc",
            "tags": {
              "Name": "jenkins"
            },
            "tags_all": {
              "Name": "jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0412bf7ea3ecd3149",
              "sg-08c744ba2f9c7eceb"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.master_server_1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ec2_instance_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03fd334507439f4d1",
            "arn": "arn:aws:ec2:eu-west-1:222634379970:instance/i-097f4e7ab17f18c09",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-097f4e7ab17f18c09",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "master",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-088c2d48810b4f37a",
            "private_dns": "ip-11-0-1-229.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.229",
            "public_ip": "34.244.214.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b9292bef6cdab9ec",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd4e7d6f0f634dbc",
            "tags": {
              "Name": "master"
            },
            "tags_all": {
              "Name": "master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0412bf7ea3ecd3149",
              "sg-08c744ba2f9c7eceb"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.monitoring",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ec2_instance_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03fd334507439f4d1",
            "arn": "arn:aws:ec2:eu-west-1:222634379970:instance/i-064d6bd49016e454c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064d6bd49016e454c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "monitoring",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00bbe934c76f61187",
            "private_dns": "ip-11-0-1-13.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.13",
            "public_ip": "54.194.91.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d65c8d87d9b1e19e",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd4e7d6f0f634dbc",
            "tags": {
              "Name": "monitoring"
            },
            "tags_all": {
              "Name": "monitoring"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0412bf7ea3ecd3149",
              "sg-08c744ba2f9c7eceb"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_proj_1_public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:internet-gateway/igw-05f3a68688708b11e",
            "id": "igw-05f3a68688708b11e",
            "owner_id": "222634379970",
            "tags": {
              "Name": "dev-proj-1-igw"
            },
            "tags_all": {
              "Name": "dev-proj-1-igw"
            },
            "vpc_id": "vpc-0d92cfae19e88039c"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_proj_1_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:route-table/rtb-0a47864dad4e4a07d",
            "id": "rtb-0a47864dad4e4a07d",
            "owner_id": "222634379970",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-proj-1-private-rt"
            },
            "tags_all": {
              "Name": "dev-proj-1-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d92cfae19e88039c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_proj_1_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:route-table/rtb-0b5a69ac9d285e90f",
            "id": "rtb-0b5a69ac9d285e90f",
            "owner_id": "222634379970",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f3a68688708b11e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-proj-1-public-rt"
            },
            "tags_all": {
              "Name": "dev-proj-1-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d92cfae19e88039c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_proj_1_public_internet_gateway",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_proj_1_private_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3279b0c9f6b43c5",
            "route_table_id": "rtb-0a47864dad4e4a07d",
            "subnet_id": "subnet-077f86c58e0cda196"
          },
          "dependencies": [
            "module.networking.aws_route_table.dev_proj_1_private_subnets",
            "module.networking.aws_subnet.dev_proj_1_private_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f30dc2f34902ad7",
            "route_table_id": "rtb-0a47864dad4e4a07d",
            "subnet_id": "subnet-0fdb1dad3d3e17812"
          },
          "dependencies": [
            "module.networking.aws_route_table.dev_proj_1_private_subnets",
            "module.networking.aws_subnet.dev_proj_1_private_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_proj_1_public_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f075b259f0fa147c",
            "route_table_id": "rtb-0b5a69ac9d285e90f",
            "subnet_id": "subnet-0fd4e7d6f0f634dbc"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_proj_1_public_internet_gateway",
            "module.networking.aws_route_table.dev_proj_1_public_route_table",
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff080f5015de9f33",
            "route_table_id": "rtb-0b5a69ac9d285e90f",
            "subnet_id": "subnet-058ff16e9a6dbee20"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.dev_proj_1_public_internet_gateway",
            "module.networking.aws_route_table.dev_proj_1_public_route_table",
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_proj_1_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:subnet/subnet-077f86c58e0cda196",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077f86c58e0cda196",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222634379970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-proj-private-subnet-1"
            },
            "tags_all": {
              "Name": "dev-proj-private-subnet-1"
            },
            "vpc_id": "vpc-0d92cfae19e88039c"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:subnet/subnet-0fdb1dad3d3e17812",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "11.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fdb1dad3d3e17812",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222634379970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-proj-private-subnet-2"
            },
            "tags_all": {
              "Name": "dev-proj-private-subnet-2"
            },
            "vpc_id": "vpc-0d92cfae19e88039c"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_proj_1_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:subnet/subnet-0fd4e7d6f0f634dbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd4e7d6f0f634dbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222634379970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-proj-public-subnet-1"
            },
            "tags_all": {
              "Name": "dev-proj-public-subnet-1"
            },
            "vpc_id": "vpc-0d92cfae19e88039c"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:subnet/subnet-058ff16e9a6dbee20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058ff16e9a6dbee20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222634379970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-proj-public-subnet-2"
            },
            "tags_all": {
              "Name": "dev-proj-public-subnet-2"
            },
            "vpc_id": "vpc-0d92cfae19e88039c"
          },
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_proj_1_vpc_eu_central_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:vpc/vpc-0d92cfae19e88039c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-00bc6348be983ea88",
            "default_route_table_id": "rtb-0b60f234efae2a704",
            "default_security_group_id": "sg-03227727a4e7ba296",
            "dhcp_options_id": "dopt-0ae61cc58fd6b2633",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d92cfae19e88039c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b60f234efae2a704",
            "owner_id": "222634379970",
            "tags": {
              "Name": "MAIN_VPC"
            },
            "tags_all": {
              "Name": "MAIN_VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.nexus",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ec2_instance_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03fd334507439f4d1",
            "arn": "arn:aws:ec2:eu-west-1:222634379970:instance/i-0703ee2b1ae46929d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0703ee2b1ae46929d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "nexus",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-032cc200b024764a1",
            "private_dns": "ip-11-0-1-130.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.130",
            "public_ip": "54.247.222.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-037850da373014861",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd4e7d6f0f634dbc",
            "tags": {
              "Name": "nexus"
            },
            "tags_all": {
              "Name": "nexus"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0412bf7ea3ecd3149",
              "sg-08c744ba2f9c7eceb"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_jenkins_port_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:security-group/sg-08c744ba2f9c7eceb",
            "description": "Enable the Port 8080 for jenkins",
            "egress": [],
            "id": "sg-08c744ba2f9c7eceb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 8080 port to access jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Allow port 8080 for jenkins",
            "name_prefix": "",
            "owner_id": "222634379970",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "tags_all": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d92cfae19e88039c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:222634379970:security-group/sg-0412bf7ea3ecd3149",
            "description": "Enable the Port 22(SSH) \u0026 Port 80(http)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outgoing request",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0412bf7ea3ecd3149",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 25,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 465,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 465
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP request from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS request from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow remote SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG for EC2 to enable SSH(22), HTTPS(443) and HTTP(80)",
            "name_prefix": "",
            "owner_id": "222634379970",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "tags_all": {
              "Name": "Security Groups to allow SSH(22) and HTTP(80)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d92cfae19e88039c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1"
          ]
        }
      ]
    },
    {
      "module": "module.slave_server_1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ec2_instance_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03fd334507439f4d1",
            "arn": "arn:aws:ec2:eu-west-1:222634379970:instance/i-04f1167cafa83f025",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f1167cafa83f025",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "slave-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ecc00c6a841be8da",
            "private_dns": "ip-11-0-1-254.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.254",
            "public_ip": "108.129.154.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03ee6f9b38a4e3013",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd4e7d6f0f634dbc",
            "tags": {
              "Name": "slave-1"
            },
            "tags_all": {
              "Name": "slave-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0412bf7ea3ecd3149",
              "sg-08c744ba2f9c7eceb"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.slave_server_2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ec2_instance_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03fd334507439f4d1",
            "arn": "arn:aws:ec2:eu-west-1:222634379970:instance/i-06df1e671317893c5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06df1e671317893c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "slave-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07066b02b3b22e0fe",
            "private_dns": "ip-11-0-1-41.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.41",
            "public_ip": "34.251.190.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aeae043f74644c0c",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd4e7d6f0f634dbc",
            "tags": {
              "Name": "slave-2"
            },
            "tags_all": {
              "Name": "slave-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0412bf7ea3ecd3149",
              "sg-08c744ba2f9c7eceb"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.solarqube",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ec2_instance_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03fd334507439f4d1",
            "arn": "arn:aws:ec2:eu-west-1:222634379970:instance/i-0b562e728b113c311",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b562e728b113c311",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "solarqube",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-083fab74f9c8b6e5a",
            "private_dns": "ip-11-0-1-185.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.185",
            "public_ip": "52.19.49.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f664ccc3d5be3f9c",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd4e7d6f0f634dbc",
            "tags": {
              "Name": "solarqube"
            },
            "tags_all": {
              "Name": "solarqube"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0412bf7ea3ecd3149",
              "sg-08c744ba2f9c7eceb"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.dev_proj_1_public_subnets",
            "module.networking.aws_vpc.dev_proj_1_vpc_eu_central_1",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    }
  ]
}